<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactDetailActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIconTint="?attr/colorOnPrimary"
        app:titleTextColor="@android:color/transparent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivPhoto"
        android:layout_width="@dimen/detail_photo_size"
        android:layout_height="@dimen/detail_photo_size"
        android:layout_marginTop="@dimen/margin_large"
        android:background="?attr/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbToolbar"
        app:shapeAppearanceOverlay="@style/CircularPhoto"
        tools:src="@drawable/ic_person" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivPhoto"
        tools:text="Nombre Contacto" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_super_large"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/tvName">

        <TextView
            android:id="@+id/tvCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvCall"
            tools:text="5544332211" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_super_large"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/clPhone">

        <TextView
            android:id="@+id/tvSendEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_email"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="?attr/colorOnPrimary"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvSendEmail"
            tools:text="5544332211" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_large"
        android:contentDescription="@string/edit"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
